# certgen

./: .gitignore  Cargo.toml  README.MD  ca.pem  ca_privkey.pem  localhost.p12  myexport.pfx
src/: gen.rs  lib.rs  main.rs
