[package]
name = 'certgen'
version = '0.1.0'
authors = ['hjiayz <hjiayz@gmail.com>']
edition = '2018'
keywords = [
    'pkcs12',
    'cert',
]
description = 'pkcs12 self signed cert tool'
homepage = 'https://github.com/hjiayz/certgen'
repository = 'https://github.com/hjiayz/certgen'
readme = 'README.MD'
license = 'MIT OR Apache-2.0'

[[bin]]
name = "certgen"
path = 'src/main.rs'
required-features = ['clap']

[dependencies]
p12 = '0.1.0'
chrono = '0.4.11'
yasna = { version = "0.3.1", features = ["bit-vec"] }
bit-vec = "0.6.1"

[dependencies.clap]
version = '2.33.0'
optional = true

[dependencies.rcgen]
version = '0.8.1'
features = ['x509-parser']

[features]
default = ["clap"]
